A first, initial compiling generator for the akoma ntoso schema.