@@ -121,11 +121,6 @@
             <version>1.6.1</version>
         </dependency>
         <dependency>
-            <groupId>org.freemarker</groupId>
-            <artifactId>freemarker</artifactId>
-            <version>2.3.15</version>
-        </dependency>
-        <dependency>
             <groupId>joda-time</groupId>
             <artifactId>joda-time</artifactId>
             <version>1.6</version>
@@ -135,6 +130,12 @@
         <dependency>
             <groupId>com.google.gwt</groupId>
             <artifactId>gwt-user</artifactId>
+            <version>${gwt.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.google.gwt</groupId>
+            <artifactId>gwt-dev</artifactId>
             <version>${gwt.version}</version>
             <scope>provided</scope>
         </dependency>
@@ -159,6 +160,20 @@
             <groupId>com.google.gwt.inject</groupId>
             <artifactId>gin</artifactId>
             <version>1.5.0</version>
+        </dependency>
+
+        <!-- XSD parsing and generation -->
+        <dependency>
+            <groupId>com.sun.xsom</groupId>
+            <artifactId>xsom</artifactId>
+            <version>20110809</version>
+        </dependency>
+
+        <!-- Freemarker templates (to be used with the generation of overlay elements -->
+        <dependency>
+            <groupId>org.freemarker</groupId>
+            <artifactId>freemarker</artifactId>
+            <version>2.3.19</version>
         </dependency>
 
 
@@ -217,6 +232,7 @@
                 <artifactId>gwt-maven-plugin</artifactId>
                 <version>${gwtplugin.version}</version>
                 <configuration>
+                    <!--<extraJvmArgs>-Xss2M -XX:MaxPermSize=512M -Xmx2048m -Xdebug -Xrunjdwp:transport=dt_socket,server=n,address=192.168.1.9:8008</extraJvmArgs>-->
                     <extraJvmArgs>-Xss2M -XX:MaxPermSize=512M -Xmx2048m</extraJvmArgs>
                     <hostedWebapp>web</hostedWebapp>
                     <modules>
